PMforce/src/objects/Feedback_Main__c.object
<CustomObject>
    <fields>
        <fullName>Count_Question__c</fullName>
        <label>Count Question</label>
        <summaryForeignKey>Feedback_Question_Main__c.Related_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Feedback_Name__c</fullName>
        <label>Feedback Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Taken_by_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FeedbackMain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Taken_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeedbackMain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Footer_text__c</fullName>
        <label>Footer text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>Question_Repository__c</referenceTo>
        <relationshipName>FeedbackMain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SelectReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FeedbackMain</label>
        <referenceTo>Feedback_Main__c</referenceTo>
        <relationshipName>FeedbackMain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feedback Main</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SelectReport__c</columns>
        <columns>Feedback_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Main</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>